--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
     </header>                   
     <main>
       <!--===================== Section hero ============-->
+       <div class="overlay">
       <section class="hero">
         <div class="container hero-container">
+         
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="type-button">Order Service</button>
+        </div>
         </div>
       </section>
       <!-- =================Section task and goals============= -->
@@ -71,29 +74,29 @@
         <div class="container task-container">
           <h2 class="secondary-title" hidden>Tasks and goals</h2>
 
-          <ul class="task-list list">
-            <li class="title-list">
+          <ul class="task-list list ">
+            <li class="title-list icon-antenna position-icon">
               <h3 class="title">Strategy</h3>
               <p class="descr-title descr-title-dark">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="title-list">
+            <li class="title-list icon-clock position-icon">
               <h3 class="title">Punctuality</h3>
               <p class="descr-title descr-title-dark">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="title-list">
+            <li class="title-list icon-diagram position-icon">
               <h3 class="title">Diligence</h3>
               <p class="descr-title descr-title-dark">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="title-list">
+            <li class="title-list icon-astronaut position-icon">
               <h3 class="title">Technologies</h3>
               <p class="descr-title descr-title-dark">
                 Design practice focused on digital experiences. We bring forth a
