--- a/index.html
+++ b/index.html
@@ -322,6 +322,67 @@
           </ul>
         </div>
       </section>
+      <section class="section-customers section">
+        <div class="container">
+          <h2 class="secondary-title">Customers</h2>
+          <ul class="custumer-list-logo list">
+            <li class="customer-logo">
+              <a class="customer-icon-link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-ya-co"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="customer-logo">
+              <a class="customer-icon-link link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-tagline-here"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="customer-logo">
+              <a class="customer-icon-link link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-company"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="customer-logo">
+              <a class="customer-icon-link link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-foster"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="customer-logo">
+              <a class="customer-icon-link link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-brand"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="customer-logo">
+              <a class="customer-icon-link link" href="">
+                <div class="font-customer">
+                  <svg class="customer-link" width="104" height="56">
+                    <use href="./images/icons.svg#icon-tag-line"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- =============================Footer====================== -->
 
