--- a/index.html
+++ b/index.html
@@ -384,6 +384,40 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div class="container sub-footer">
+       
+        <p class="foot-subtext">Social media</p>
+        <ul class="footer-social list">
+          <li class="icon-list-item">
+            <a class="social-icon-link" href="">
+              <svg class="foot-icon-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-list-item">
+            <a class="social-icon-link" href="">
+              <svg class="foot-icon-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-list-item">
+            <a class="social-icon-link" href="">
+              <svg class="foot-icon-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-list-item">
+            <a class="social-icon-link" href="">
+              <svg class="foot-icon-link" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
