--- a/index.html
+++ b/index.html
@@ -74,61 +74,53 @@
 
           <ul class="task-list list">
             <li class="title-list icon-antenna position-icon">
-              <a class="task-link-box link" href="">
-                <div class="font-task">
-                  <svg class="task-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna"></use>
-                  </svg>
-                </div>
-                <h3 class="title">Strategy</h3>
-                <p class="descr-title descr-title-dark">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </a>
+              <div class="font-task">
+                <svg class="task-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="title">Strategy</h3>
+              <p class="descr-title descr-title-dark">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </li>
 
             <li class="title-list icon-antenna position-icon">
-              <a class="task-link-box link" href="">
-                <div class="font-task">
-                  <svg class="task-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-clock"></use>
-                  </svg>
-                </div>
-                <h3 class="title">Punctuality</h3>
-                <p class="descr-title descr-title-dark">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </a>
+              <div class="font-task">
+                <svg class="task-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="title">Punctuality</h3>
+              <p class="descr-title descr-title-dark">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
             </li>
             <li class="title-list icon-antenna position-icon">
-              <a class="task-link-box link" href="">
-                <div class="font-task">
-                  <svg class="task-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-diagram"></use>
-                  </svg>
-                </div>
-                <h3 class="title">Diligence</h3>
-                <p class="descr-title descr-title-dark">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </a>
+              <div class="font-task">
+                <svg class="task-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="title">Diligence</h3>
+              <p class="descr-title descr-title-dark">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
             </li>
             <li class="title-list icon-antenna position-icon">
-              <a class="task-link-box link" href="">
-                <div class="font-task">
-                  <svg class="task-icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
-                  </svg>
-                </div>
-                <h3 class="title">Technologies</h3>
-                <p class="descr-title descr-title-dark">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </a>
+              <div class="font-task">
+                <svg class="task-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="title">Technologies</h3>
+              <p class="descr-title descr-title-dark">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
@@ -376,47 +368,48 @@
 
     <footer class="page-footer">
       <div class="container box-footer">
-        <a href="./index.html" class="web-logo link"
-          >Web<span class="studio-logo-light">Studio</span></a
-        >
-        <p class="descr-title descr-title-light">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container sub-footer">
-       
-        <p class="foot-subtext">Social media</p>
-        <ul class="footer-social list">
-          <li class="icon-list-item">
-            <a class="social-icon-link" href="">
-              <svg class="foot-icon-link" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list-item">
-            <a class="social-icon-link" href="">
-              <svg class="foot-icon-link" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list-item">
-            <a class="social-icon-link" href="">
-              <svg class="foot-icon-link" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-list-item">
-            <a class="social-icon-link" href="">
-              <svg class="foot-icon-link" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="box-one">
+          <a href="./index.html" class="web-logo link"
+            >Web<span class="studio-logo-light">Studio</span></a
+          >
+          <p class="descr-title descr-title-light">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="box-two">
+          <p class="foot-subtext">Social media</p>
+          <ul class="footer-social list">
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
