--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
           <a href="./index.html" class="web-logo link"
             >Web<span class="studio-logo-dark">Studio</span></a
           >
+
           <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link" href="./index.html">Studio</a>
@@ -85,7 +86,7 @@
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/banking-app.jpg"
                   alt="Banking App Interface Concept"
@@ -99,7 +100,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/cashless-payment.jpg"
                   alt="Cashless Payment"
@@ -113,7 +114,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
@@ -127,7 +128,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/taxi-service.jpg"
                   alt="Taxi Service"
@@ -141,7 +142,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations"
@@ -155,7 +156,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/online-courses.jpg"
                   alt="Online Courses"
@@ -169,7 +170,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/instagram-stories.jpg"
                   alt="Instagram Stories Concept"
@@ -183,7 +184,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/organic-food.jpg"
                   alt="Organic Food"
@@ -197,7 +198,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/fresh-coffee.jpg"
                   alt="Fresh Coffee"
@@ -216,16 +217,50 @@
     </main>
 
     <!--============================= Footer =======================-->
-
     <footer class="page-footer">
       <div class="container box-footer">
-        <a href="./index.html" class="web-logo link"
-          >Web<span class="studio-logo-light">Studio</span></a
-        >
-        <p class="descr-title descr-title-light">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="box-one">
+          <a href="./index.html" class="web-logo link"
+            >Web<span class="studio-logo-light">Studio</span></a
+          >
+          <p class="descr-title descr-title-light">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="box-two">
+          <p class="foot-subtext">Social media</p>
+          <ul class="footer-social list">
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-list-item">
+              <a class="social-icon-link" href="">
+                <svg class="foot-icon-link" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
